--- a/index.html
+++ b/index.html
@@ -298,8 +298,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- Vision Section  -->
             <section class="vision-section-container">
                 <div class="row pt-md-4 mt-md-4">
                     <div class="col-lg-6 vision-section-img-container">
@@ -323,8 +321,8 @@
         <!-- Build your dream section  -->
         <section class="build-your-dream-container">
             <div class="container-fluid">
-                <div class="row gap-5">
-                    <div class="col-lg-6 build-your-dream-text-container order-last order-md-first">
+                <div class="row">
+                    <div class="col-lg-6 build-your-dream-text-container">
                         <h1>Help To Build Your <br class="br"> Dream Project</h1>
                         <p>A digital agency is a business you hire to outsource <br class="br"> your digital marketing
                             efforts, instead
