Homepage 55% that was lost

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 </div>
             </section>
             <section class="vision-section-container">
-                <div class="row pt-md-4 mt-md-4">
+                <div class="row pt-md-4 mt-md-4 gap-5 gap-lg-0">
                     <div class="col-lg-6 vision-section-img-container">
                         <img src="Assets/img/icons/vision-img.png" class="w-responsive w-75 img-fluid" alt="">
                         <img src="Assets/img/icons/shadow-vision-img.png" alt="" class="w-responsive w-75 img-fluid">
@@ -321,8 +321,8 @@
         <!-- Build your dream section  -->
         <section class="build-your-dream-container">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-6 build-your-dream-text-container">
+                <div class="row gap-5 gap-lg-0">
+                    <div class="col-lg-6 build-your-dream-text-container ">
                         <h1>Help To Build Your <br class="br"> Dream Project</h1>
                         <p>A digital agency is a business you hire to outsource <br class="br"> your digital marketing
                             efforts, instead
