--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
         <!-- Testimonial section  -->
         <section class="testimonial-section">
             <div class="container-fluid">
-                <h2>We Are Loved By Our Users <br class="br"> And Clients Worldwide</h2>
+                <h2 class="pt-4 pb-4">We Are Loved By Our Users <br class="br"> And Clients Worldwide</h2>
                 <!-- Testimonial Slider  -->
-                <div class="testimonial-slider swiper mt-2 pt-2">
+                <div class="testimonial-slider swiper mt-2 pt-4 pb-3">
                     <div class="swiper-wrapper mb-3">
 
                         <!-- Testimonial Item Slider Start  -->
@@ -554,12 +554,11 @@
         breakpoints: {
             320: {
                 slidesPerView: 1,
-                spaceBetween: 40,
+                spaceBetween: 100,
             },
-
-            1200: {
-                slidesPerView: 4,
-                spaceBetween: 345,
+            980: {
+                slidesPerView: 3,
+                spaceBetween: 150,
             },
         },
     });
