--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                             <img src="Assets/img/testimonials-imgs/testimonial-1-img.png" alt=""
                                                 class="w-25 w-responsive img-fluid testimonial-img">
                                             <div class="text-container">
-                                                <span class="brand h4 mb-0 bold">Augustine Ugbaja</span>
+                                                <span class="brand h4 mb-0 bold">Augustine&nbsp;Ugbaja</span>
                                                 <span class="brand mb-0">Fullstack Developer</span>
                                             </div>
                                         </div>
@@ -417,7 +417,7 @@
                                             <img src="Assets/img/testimonials-imgs/testimonial-2-img.png" alt=""
                                                 class="w-25 w-responsive img-fluid testimonial-img">
                                             <div class="text-container">
-                                                <span class="brand h4 mb-0 bold">Ronald Richards</span>
+                                                <span class="brand h4 mb-0 bold">Ronald&nbsp;Richards</span>
                                                 <span class="brand mb-0">UI/UX Designer</span>
                                             </div>
                                         </div>
@@ -458,7 +458,7 @@
                                             <img src="Assets/img/testimonials-imgs/testimonial-2-img.png" alt=""
                                                 class="w-25 w-responsive img-fluid testimonial-img">
                                             <div class="text-container">
-                                                <span class="brand h4 mb-0 bold">Ronald Richards</span>
+                                                <span class="brand h4 mb-0 bold">Ronald&nbsp;Richards</span>
                                                 <span class="brand mb-0">UI/UX Designer</span>
                                             </div>
                                         </div>
@@ -555,6 +555,10 @@
             320: {
                 slidesPerView: 1,
                 spaceBetween: 100,
+            },
+            700: {
+                slidesPerView: 2,
+                spaceBetween: 160,
             },
             980: {
                 slidesPerView: 3,
