--- a/index.html
+++ b/index.html
@@ -486,6 +486,30 @@
             </div>
         </section>
     </main>
+
+
+    <!-- Main Footer  -->
+    <footer class="main-footer">
+        <div class="container-fluid">
+            <h2 class="bold">CodeSpace.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat architecto <br class="br"> itaque
+                necessitatibus veniam incidunt unde rerum eum!</p>
+            <h4 class="bold">Send us a question <span class="brand"><a href="">hello@codespace.com</a></span></h4>
+            <!-- <div class="socials-container">
+
+            </div> -->
+            <!-- Social Container  -->
+            <div class="showcase-socials mb-3">
+                <a href="" class="social-link"><img src="Assets/img/icons/Instagram.svg" alt="" class="social-icon"></a>
+                <a href="" class="social-link"><img src="Assets/img/icons/twitter.svg" alt="" class="social-icon"></a>
+                <a href="" class="social-link"><img src="Assets/img/icons/telegram.svg" alt="" class="social-icon"></a>
+                <a href="" class="social-link"><img src="Assets/img/icons/slack.svg" alt="" class="social-icon"></a>
+            </div>
+            <p class="copyright-text"> </p>
+            &copy; 2022 | <br class="br-sm"> Alright Reserved By CodeSpace
+        </div>
+    </footer>
+
 </body>
 <!-- Mdbootstrap Js  -->
 <script src="Assets/vendors/mdbootstrap/js/mdb.min.js"></script>
